--- a/rocka-chat/client/main.html
+++ b/rocka-chat/client/main.html
@@ -1,25 +1,12 @@
 <head>
-  <title>rocka-chat</title>
+  <meta charset="utf-8">
+  <title>Live Chat - RockaLabs</title>
+  <meta content="initial-scale=1.0, maximum-scale=1.0, user-scalable=no, width=device-width" name="viewport">
+  <meta name="format-detection" content="telephone=no"> <!-- To disable phone number typing.-->
+  <meta name="keywords" content="rockalabs, chat">
+  <meta name="author" content="Rocka: Tech Company Builder">
+  <meta name="description" content="Live chat made with MeteorJs">
+
+  <!-- favicon -->
+  <link id="faviconLink" rel="shortcut icon" href="/rocka-assets/images/favicon.ico">
 </head>
-
-<body>
-  <h1>Welcome to Meteor!</h1>
-
-  {{> hello}}
-  {{> info}}
-</body>
-
-<template name="hello">
-  <button>Click Me</button>
-  <p>You've pressed the button {{counter}} times.</p>
-</template>
-
-<template name="info">
-  <h2>Learn Meteor!</h2>
-  <ul>
-    <li><a href="https://www.meteor.com/try" target="_blank">Do the Tutorial</a></li>
-    <li><a href="http://guide.meteor.com" target="_blank">Follow the Guide</a></li>
-    <li><a href="https://docs.meteor.com" target="_blank">Read the Docs</a></li>
-    <li><a href="https://forums.meteor.com" target="_blank">Discussions</a></li>
-  </ul>
-</template>
